--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Welcome to my Website</h1>
+    <h1 style="color:blue;">Welcome to my Website</h1>
     <h1>Welcome to my balls</h1>
     <h1>Hello, World!</h1>
 </body>
